🐛 fix(calendar): Fix calendar date picker in high contrast mode.

--- a/assets/scss/shared-ui/_calendar-range.scss
+++ b/assets/scss/shared-ui/_calendar-range.scss
@@ -279,58 +279,54 @@
 				pointer-events: none;
 			}
 		}
-	}
-}
+		
+		&.sui-color-accessible {
 
-@include body-class(false, false, true) {
+			.drp-calendar {
 	
-	// Range Datepicker.
-	.daterangepicker {
-
-		.drp-calendar {
-
-			.table-condensed {
-
-				tbody tr {
-
-					td {
-						// STATE: Available.
-						&.available:not(.off) {
-
-							&.today {
-								background-color: $overcast;
-								color: $black;
-							}
-
-							&.start-date,
-							&.end-date {
-								background-color: $nightrider;
-								color: $white;
-							}
-
-							&.in-range:not(.end-date) {
-								color: $black;
-								background-color: $haze;
+				.table-condensed {
+	
+					tbody tr {
+	
+						td {
+							// STATE: Available.
+							&.available:not(.off) {
+	
+								&.today {
+									background-color: $overcast;
+									color: $black;
+								}
+	
+								&.start-date,
+								&.end-date {
+									background-color: $nightrider;
+									color: $white;
+								}
+	
+								&.in-range:not(.end-date) {
+									color: $black;
+									background-color: $haze;
+								}
 							}
 						}
 					}
 				}
 			}
-		}
-
-		// VARIATION: Show ranges.
-		&.show-ranges {
-			.ranges {
-				ul {
-					li {
-						&:hover,
-						&:focus {
-							background-color: $overcast;
-						}
-
-						&.active {
-							background-color: $nightrider;
-							color: $white;
+	
+			// VARIATION: Show ranges.
+			&.show-ranges {
+				.ranges {
+					ul {
+						li {
+							&:hover,
+							&:focus {
+								background-color: $overcast;
+							}
+	
+							&.active {
+								background-color: $nightrider;
+								color: $white;
+							}
 						}
 					}
 				}
