--- a/assets/scss/shared-ui/_calendar.scss
+++ b/assets/scss/shared-ui/_calendar.scss
@@ -193,35 +193,32 @@
 				}
 			}
 		}
-	}
-}
-
-@include body-class(false, false, true) {
-	// Single Datepicker.
-	#ui-datepicker-div {
-		&.sui-calendar {
-			.ui-datepicker-calendar {
-				tbody tr {
-					td {
-						// OPTION: Default.
-						a.ui-state-default {
-
-							&.ui-state-active {
-								background-color: $nightrider;
-								color: $white;
-							}
-						}
-
-						// OPTION: Today.
-						&.ui-datepicker-today {
-
+		
+		&.sui-color-accessible {
+			&.sui-calendar {
+				.ui-datepicker-calendar {
+					tbody tr {
+						td {
+							// OPTION: Default.
 							a.ui-state-default {
-								background-color: $overcast;
-								color: $black;
 
 								&.ui-state-active {
 									background-color: $nightrider;
 									color: $white;
+								}
+							}
+
+							// OPTION: Today.
+							&.ui-datepicker-today {
+
+								a.ui-state-default {
+									background-color: $overcast;
+									color: $black;
+
+									&.ui-state-active {
+										background-color: $nightrider;
+										color: $white;
+									}
 								}
 							}
 						}
